[package]
name = "haibun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.5"
comfy-table = "2.1.0"
dialoguer = "0.7.1"
directories = "3.0"
postgres = {version="0.19.0", features=["with-chrono-0_4"]}
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
regex = "1"
rust_decimal = { version = "1.10.3", features = ["db-postgres"] }
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"
toml = "0.5.8"

